apps/monitoring/gatus/manifests/ingressroute.yaml
# Chart Service gatus listens on port 80 and targets container port 8080.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: status
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.stadthagen.dev`)
      kind: Rule
      services:
        - name: gatus
          port: 80
  tls:
    secretName: status-tls
